package com.peppayi.designpattern.headfirst.chapters.chapter01.duck;

public interface Flyable {

    void fly();
}
