package com.peppayi.designpattern.headfirst.chapters.chapter01.duck;

public interface Quackable {

    void quack();
}
